# SPH

./: .gitignore  CMakeCache.txt  CMakeLists.txt  LICENSE  README-DBG.md  README.md  Resource.h  WindowsProject_optimization_SPH.cpp  WindowsProject_optimization_SPH.rc  WindowsProject_optimization_SPH.sln  WindowsProject_optimization_SPH.vcxproj  WindowsProject_optimization_SPH.vcxproj.filters  framework.h  setup.sh
.github/workflows/: cmake-multi-platform.yml
WindowsP.12a1a23c/x64/Debug/: WindowsProject_optimization_SPH.exe.recipe  WindowsProject_optimization_SPH.ilk  vc143.idb
WindowsP.12a1a23c/x64/Debug/WindowsP.12a1a23c.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  WindowsProject_optimization_SPH.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
WindowsP.12a1a23c/x64/Release/: WindowsProject_optimization_SPH.exe.recipe  WindowsProject_optimization_SPH.iobj  WindowsProject_optimization_SPH.ipdb
WindowsP.12a1a23c/x64/Release/WindowsP.12a1a23c.tlog/: CL.command.1.tlog  CL.write.1.tlog  Cl.items.tlog  WindowsProject_optimization_SPH.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.write.1.tlog
bench/: run_dambreak.py
bindings/: CMakeLists.txt  pybind_module.cpp
docs/: GPU_Spatial_Hash_2D.md  benchmarks.md  build.md  testing.md
examples/: plot_snapshot.py  run_gui.py
src/sph/: debug_gpu.hpp
src/sph/core/: cuda_utils.h  kernels.h  kernels_cuda.cu  kernels_cuda.h  world.cpp  world.h  world_cuda.cu
src/sph/gpu/: hash_grid_2d.cu  hash_grid_2d.hpp  neighbor_search_2d.cu
tests/: CMakeLists.txt  test_bindings.py  test_calc.cpp  test_device_query.cpp  test_grid2d.cu  test_kernel_compare.cpp  test_neighbor_compare.cu  test_profile.cpp
x64/Release/: WindowsProject_optimization_SPH.iobj  WindowsProject_optimization_SPH.ipdb  WindowsProject_optimization_SPH.res  WindowsProject_optimization_SPH.vcxproj.FileListAbsolute.txt
x64/Release/WindowsP.12a1a23c.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  WindowsProject_optimization_SPH.lastbuildstate  WindowsProject_optimization_SPH.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
